# django-economy-sectors

./: .gitignore  MANIFEST.in  README.rst  requirements.txt  setup.cfg
economy_sector_module/: apps.py  utils.py
economy_sector_module/fixtures/: ateco_relations.yaml  ateco_standard.yaml  gics_relations.yaml  gics_standard.yaml  isic_relations.yaml  isic_standard.yaml  nace_relations.yaml  nace_standard.yaml  naics_relations.yaml  naics_standard.yaml  sae_standard.yaml  sic_standard.yaml
economy_sector_module/fixtures/initial_data/: ateco_standard.yaml  gics_standard.yaml  isic_standard.yaml  nace_standard.yaml
economy_sector_module/management/commands/: load_initial_data.py  load_relations_data.py
economy_sector_module/migrations/: 0001_initial.py
economy_sector_module/models/: __init__.py  economy_sector.py  economysector.py
economy_sectors/: apps.py  utils.py
economy_sectors/fixtures/: standards.yaml
economy_sectors/management/commands/: load_standards_data.py  load_standards_relations.py
economy_sectors/migrations/: 0001_initial.py  0002_standard_alter_economysectorrelation_id_and_more.py
economy_sectors/models/: economy_sector.py
tests/: conftest.py  settings.py  test_models.py
